--- a/package.json
+++ b/package.json
@@ -15,11 +15,9 @@
     "firebase": "^12.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-<<<<<<< HEAD
-=======
     "react-fast-marquee": "^1.6.5",
->>>>>>> 44ba30f ( Meaningful Message)
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.26.3",
